deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 16:22:17 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sendermqwar
  name: sendermqwar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sendermqwar
  template:
    metadata:
      labels:
        app: sendermqwar
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: sendermqwar
          ports:
            - containerPort: 9080
              protocol: TCP
