deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 16:22:17 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sendermqwar
  name: sendermqwar
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: sendermqwar
