deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Fri Nov 29 16:22:17 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sendermqwar
  name: sendermqwar
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: sendermqwar
    weight: 100
